@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/Attic/musicbrainz-2.1.1-r1.ebuild,v 1.1 2005/04/27 07:17:13 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/Attic/musicbrainz-2.1.1-r1.ebuild,v 1.2 2006/04/01 16:14:09 chutzpah Exp $
 
 IUSE=""
 
@@ -43,7 +43,7 @@ pkg_postinst() {
 	einfo "The name of the library has changed from libmusicbrainz.so.2 to libmusicbrainz.so.4."
 	einfo "If you are updating from musicbrainz-2.0.x and you want to use the new library with"
 	einfo "existing applications, you must re-emerge them by doing:"
-	einfo "revdep-rebuild --soname libmusicbrainz.so.2"
+	einfo "revdep-rebuild --library=libmusicbrainz.so.2"
 	einfo
 	einfo "After doing that, you can safely unmerge your old version by doing:"
 	einfo "emerge unmerge \=media-libs/musicbrainz-<old version>"
