@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/musicbrainz
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.48 2006/02/13 22:34:36 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.49 2006/04/01 16:14:09 chutzpah Exp $
+
+  01 Apr 2006; Patrick McLean <chutzpah@gentoo.org>
+  musicbrainz-2.1.1.ebuild, musicbrainz-2.1.1-r1.ebuild:
+  Update einfo messages to say revdep-rebuild --library=blah rather than
+  --soname blah (bug #125506)
 
 *musicbrainz-2.1.2 (13 Feb 2006)
 
